@@ -99,6 +99,24 @@
     <li><span class="label label-warning">Bugfix</span> Failure authenticating with proxy using Integrated Windows
         Authentication (IWA) authentication (WebDAV, Windows)
     </li>
+    <li><span class="label label-warning">Bugfix</span> Failure authenticating with NTLM authentication (WebDAV,
+        Windows) (<a
+            href="https://trac.cyberduck.io/ticket/10556">#10556</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Failure to read attributes of common prefix (S3) (<a
+        href="https://trac.cyberduck.io/ticket/8724">#8724</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Asks for OAuth authentication code on every connect attempt
+        (Google Drive) (<a
+            href="https://trac.cyberduck.io/ticket/10555">#10555</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Transfers with many files to vault take a long time to finish
+        (Cryptomator) (<a
+            href="https://trac.cyberduck.io/ticket/10564">#10564</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Cannot list KMS keys when using IAM Cross Account Roles (S3) (<a
+        href="https://trac.cyberduck.io/ticket/10565">#10565</a>)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Updated localizations</li>
 
 </ul>
